--- a/ptak-expo-frontend/src/pages/dashboardPage/DashboardPage.module.scss
+++ b/ptak-expo-frontend/src/pages/dashboardPage/DashboardPage.module.scss
@@ -17,12 +17,14 @@
   background-image: url('../../assets/tło.png');
   background-position: center;
   background-size: cover;
-  opacity:0.5;
+  opacity: 0.5;
+  transition: opacity 0.3s ease-in-out;
+  will-change: opacity;
 
   @media (max-width: 600px) {
     background-image: url('../../assets/tlo_m.png');
   }
-  display:flex;
+  display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
